# debug-mcp-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  simple_test.py
examples/: usage_example.py
src/debug_mcp/: __init__.py  server.py
